--- a/HappyAnding/HappyAnding/Views/Launch Screen.storyboard
+++ b/HappyAnding/HappyAnding/Views/Launch Screen.storyboard
@@ -16,24 +16,18 @@
                         <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="obG-Y5-kRd">
-                                <rect key="frame" x="0.0" y="824" width="390" height="0.0"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ShortcutsZip" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lIc-RZ-PS6">
+                                <rect key="frame" x="115.33333333333333" y="406.33333333333331" width="159.66666666666669" height="31.333333333333314"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="26"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="launchscreenimg" translatesAutoresizingMaskIntoConstraints="NO" id="tf5-b4-OM6">
-                                <rect key="frame" x="139" y="340" width="112" height="164"/>
-                            </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="Bcu-3y-fUS"/>
-                        <color key="backgroundColor" name="Background"/>
+                        <color key="backgroundColor" name="Primary"/>
                         <constraints>
-                            <constraint firstItem="Bcu-3y-fUS" firstAttribute="centerX" secondItem="obG-Y5-kRd" secondAttribute="centerX" id="5cz-MP-9tL"/>
-                            <constraint firstItem="tf5-b4-OM6" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="JIi-uu-JWb"/>
-                            <constraint firstItem="obG-Y5-kRd" firstAttribute="leading" secondItem="Bcu-3y-fUS" secondAttribute="leading" symbolic="YES" id="SfN-ll-jLj"/>
-                            <constraint firstAttribute="bottom" secondItem="obG-Y5-kRd" secondAttribute="bottom" constant="20" id="Y44-ml-fuU"/>
-                            <constraint firstItem="tf5-b4-OM6" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="c4z-hh-lte"/>
+                            <constraint firstItem="lIc-RZ-PS6" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="Jpd-bq-muq"/>
+                            <constraint firstItem="lIc-RZ-PS6" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="Y7k-Nm-986"/>
                         </constraints>
                     </view>
                 </viewController>
@@ -43,9 +37,8 @@
         </scene>
     </scenes>
     <resources>
-        <image name="launchscreenimg" width="112" height="164"/>
-        <namedColor name="Background">
-            <color red="0.98400002717971802" green="0.98400002717971802" blue="0.98400002717971802" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        <namedColor name="Primary">
+            <color red="0.20000000298023224" green="0.40000000596046448" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
 </document>
